eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-std-lib-api-service
spec:
  selector:
    app: api-std-lib-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
