eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-std-lib-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "api.driveguard.net"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: api-std-lib-service
            port:
              number: 80
  tls:
  - hosts:
    - api.driveguard.net
    secretName: api-std-lib-api-cert
